# Phronosis

./: .env.example  .gitignore  .mcp.json  .mcp.json.template  BUSINESS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  conftest.py  docker-compose.unraid.yml  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql  schema_control_plane.sql  setup.sh
benchmark/: evaluator.py  loader.py  repo_setup.py  report.py  run.py  runner.py
cli/: config.py  main.py
docs/: contract-bypass-vectors.md  phase16-audit.md  session-isolation-eli5.md
k8s/: README.md  api-deployment.yaml  bootstrap-admin-job.yaml  configmap.yaml  hpa-api.yaml  hpa-worker.yaml  ingress.yaml  migration-job.yaml  namespace.yaml  postgres-init.sql  postgres.yaml  redis.yaml  secrets.yaml  worker-deployment.yaml
scripts/: acip-post-edit-hook.py  acip-pre-edit-hook.py  backfill_cochange.py  backfill_decisions.py  bootstrap_api_key.py  create_user.py  db_health.py  index_demo_repos.py  migrate_sqlite_to_postgres.py  migrate_to_schemas.py  post-commit.sh  rotate_api_key.py  setup_db.sh
src/: analysis.py  architecture_service.py  auth.py  client_setup.py  dependency_fingerprint.py  email_sender.py  indexer.py  jobs.py  org_router.py  pattern_detector.py  performance.py  provisioning.py  queue.py  schema_objects.py  scip_import.py  server.py  solid.py  worker.py
tests/: conftest.py  test_architecture.py  test_auth.py  test_branch_conflicts.py  test_chunker.py  test_decision_memory.py  test_dependency_fingerprint.py  test_fork.py  test_indexer_integration.py  test_jobs.py  test_mcp_tools.py  (+12 more)
(+28 files in other folders)
